HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/BitcopyFieldNonBitcopy/Expected.uv
//! Expected diagnostic metadata for the BitcopyFieldNonBitcopy rejected-source specimen.

expectedDiagnostic("E-TYP-2622", "diag.14.FoundationalClasses")
